--- a/hardwork.ipynb
+++ b/hardwork.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -208,13 +209,22 @@
    "outputs": [],
    "source": [
     "x=dfx.to_numpy()\n",
-    "y=dfy.to_numpy()\n",
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.30, random_state=42)"
+    "y=dfy.to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler=StandardScaler()\n",
+    "x=scaler.fit_transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +233,7 @@
        "0.9709612233822353"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,6 +241,140 @@
    "source": [
     "reg=LinearRegression().fit(x,y)\n",
     "reg.score(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfxtest=pd.read_csv('./TestCases/Linear_X_Test.csv')\n",
+    "x_test=dfxtest.to_numpy()\n",
+    "x_test=scaler.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=reg.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-147.528475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-66.266998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-200.062093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>226.044960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>51.329285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1245</th>\n",
+       "      <td>-9.808053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1246</th>\n",
+       "      <td>78.812578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1247</th>\n",
+       "      <td>14.038203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1248</th>\n",
+       "      <td>-18.666169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1249</th>\n",
+       "      <td>-51.075947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1250 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               y\n",
+       "0    -147.528475\n",
+       "1     -66.266998\n",
+       "2    -200.062093\n",
+       "3     226.044960\n",
+       "4      51.329285\n",
+       "...          ...\n",
+       "1245   -9.808053\n",
+       "1246   78.812578\n",
+       "1247   14.038203\n",
+       "1248  -18.666169\n",
+       "1249  -51.075947\n",
+       "\n",
+       "[1250 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(y_pred, columns = ['y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('file1.csv',index=False)"
    ]
   }
  ],
